# c-conf

./: .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: distclean.cmake
conf/: example.conf
example/: CMakeLists.txt
src/: CMakeLists.txt  cfg.c  cfg.h  str.c  str.h
test/: CMakeLists.txt  example.c
